ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hamrss
spec:
  tls:
  - hosts:
      - hamrss.oddbit.com
    secretName: hamrss-tls
  rules:
  - host: hamrss.oddbit.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hamrss
            port:
              name: http
